--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -25,25 +25,6 @@
     <div id="leftControls" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeLeftControls()">&times;</a>
 
-        <div id="slider-range"></div>
-
-        <script>
-            $(function () {
-        $("#slider-range").slider({
-            range: true,
-            min: 0,
-            max: 500,
-            values: [75, 300],
-            slide: function (event, ui) {
-                $("#amount").val("$" + ui.values[0] + " - $" + ui.values[1]);
-            }
-        });
-        $("#amount").val("$" + $("#slider-range").slider("values", 0) +
-            " - $" + $("#slider-range").slider("values", 1));
-    });
-</script>
-
-
 
 
 
@@ -141,7 +122,7 @@
         map.on('load', function () {
             map.addSource('placeringer', {
                 type: 'geojson',
-                data: 'https://dl.dropbox.com/s/r5qlo2zgbyctxvp/placeringsoversigt_medium.geojson?dl=0'
+                data: 'https://dl.dropbox.com/s/r5qlo2zgbyctxvp/placeringsoversigt_small.geojson?dl=0'
                 // data: 'data/placeringsoversigt_small.geojson'
             });
             map.addLayer(heatmap);
@@ -161,6 +142,11 @@
                 var data = getCounts(query);
                 createPieChart(data);
                 map.off('render', loadPieChart)
+                // Filter on date - TEST FIXME:
+                var startYear = ['>=', ['number', ['get', 'year']], 2017]
+                var endYear = ['<=', ['number', ['get', 'year']], 2018]
+                map.setFilter('place-heat', ['all', startYear, endYear]);
+                map.setFilter('place-point', ['all', startYear, endYear]);
             }
         }
 
