--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -48,6 +48,19 @@
                 createPieChart(data);
                 openRightControls();
         });
+
+        $('input[name="daterange"]').on('cancel.daterangepicker', function(ev, picker) {
+                var unixStart = ['>=', ['number', ['get', 'timestampS']], 0]
+                var unixEnd = ['<=', ['number', ['get', 'timestampS' ]], 2147483647]
+                map.setFilter('place-heat', ['all', unixStart, unixEnd]);
+                map.setFilter('place-point', ['all', unixStart, unixEnd]);
+                var query = map.queryRenderedFeatures({
+                    layers: ['place-point']
+                });
+                var data = getCounts(query);
+                createPieChart(data);
+                openRightControls();
+        });
     });
 </script>
         <a>Visible activites:</a>
