--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -120,6 +120,10 @@
                 "heatmap-opacity": 0.7,
                 'heatmap-radius': 7,
                 'heatmap-intensity': 0.05,
+                "heatmap-weight": {
+                    "type": "identity",
+                    "property": "point_count"
+                },
                 // assign color values be applied to points depending on their density
                 'heatmap-color': [
                     'interpolate',
@@ -161,6 +165,10 @@
             openLeftControls();
             map.on('render', loadPieChart);
         });
+
+        function updateHeatMap() {
+
+        }
 
         function loadPieChart(e) {
             if (e.target && e.target.loaded()) {
