--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -43,12 +43,7 @@
                 var unixEnd = ['<=', ['number', ['get', 'timestampS']], unixEnd]
                 map.setFilter('place-heat', ['all', unixStart, unixEnd]);
                 map.setFilter('place-point', ['all', unixStart, unixEnd]);
-                var query = map.queryRenderedFeatures({
-                    layers: ['place-point']
-                });
-                var data = getCounts(query);
-                createPieChart(data);
-                openRightControls();
+                map.on('render', loadPieChart);
         });
 
         $('input[name="daterange"]').on('cancel.daterangepicker', function(ev, picker) {
@@ -56,39 +51,34 @@
                 var unixEnd = ['<=', ['number', ['get', 'timestampS' ]], 2147483647]
                 map.setFilter('place-heat', ['all', unixStart, unixEnd]);
                 map.setFilter('place-point', ['all', unixStart, unixEnd]);
-                var query = map.queryRenderedFeatures({
-                    layers: ['place-point']
-                });
-                var data = getCounts(query);
-                createPieChart(data);
-                openRightControls();
+                map.on('render', loadPieChart);
         });
     });
 </script>
         <a>Visible activites:</a>
         🚗 In car:
-        <input style="color:white;" type="checkbox" id="vehicleCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="IN_VEHICLE" onclick="checkBoxes()" checked>
         <br>
         🦶 On foot:
-        <input style="color:white;" type="checkbox" id="onFootCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="ON_FOOT" onclick="checkBoxes()" checked>
         <br>
         🚫 Not available:
-        <input style="color:white;" type="checkbox" id="naCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="NA" onclick="checkBoxes()" checked>
         <br>
         🚴 On bike:
-        <input style="color:white;" type="checkbox" id="onBicycleCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="ON_BICYCLE" onclick="checkBoxes()" checked>
         <br>
         😑 Still:
-        <input style="color:white;" type="checkbox" id="stillCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="STILL" onclick="checkBoxes()" checked>
         <br>
         🤣 Tilting:
-        <input style="color:white;" type="checkbox" id="tiltingCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="TILTING" onclick="checkBoxes()" checked>
         <br>
         ❓ Unknown:
-        <input style="color:white;" type="checkbox" id="unknownCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="UNKNOWN" onclick="checkBoxes()" checked>
         <br>
         ❓ Exiting Vehicle:
-        <input style="color:white;" type="checkbox" id="exitingVehicleCheck" onclick="checkBoxes()" checked>
+        <input style="color:white;" type="checkbox" id="EXITING_VEHICLE" onclick="checkBoxes()" checked>
     </div>
     <!-- Side Visualization -->
     <div id="rightControls" class="sidenav sidenavRight">
@@ -176,13 +166,11 @@
                 var query = map.queryRenderedFeatures({
                     layers: ['place-point']
                 });
-                var data = getCounts(query);
-                createPieChart(data);
+                createPieChart(query);
                 map.off('render', loadPieChart)
             }
         }
 
-        // Add drawing stuff for selecting
         var draw = new MapboxDraw({
             displayControlsDefault: false,
             controls: {
@@ -201,9 +189,7 @@
             })
 
             var userPolygon = e.features[0];
-            // generate bounding box from polygon the user drew
             var polygonBoundingBox = turf.bbox(userPolygon);
-
             var southWest = [polygonBoundingBox[0], polygonBoundingBox[1]];
             var northEast = [polygonBoundingBox[2], polygonBoundingBox[3]];
             var northEastPointPixel = map.project(northEast);
@@ -219,9 +205,9 @@
                 }
                 return memo;
             }, []);
-            var data = getCounts(filtered);
-            createPieChart(data);
+            createPieChart(filtered);
         }
+
 
         function getCounts(data) {
             var counts = {};
@@ -258,7 +244,7 @@
             var filteredActivities = []
 
             boxes.forEach(function (element) {
-                var checkBox = document.getElementById(element[0]);
+                var checkBox = document.getElementById(element[1]);
                 if (checkBox.checked == true) {
                     filteredActivities.push(element[1])
                 }
@@ -266,13 +252,7 @@
 
             map.setFilter('place-heat', buildFilter(filteredActivities))
             map.setFilter('place-point', buildFilter(filteredActivities))
-
-            // new pie chart
-            var query = map.queryRenderedFeatures({
-                layers: ['place-point']
-            });
-            var data = getCounts(query);
-            createPieChart(data);
+            map.on('render', loadPieChart);
         }
 
         function buildFilter(arr) {
