--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -43,6 +43,7 @@
                 var unixEnd = ['<=', ['number', ['get', 'timestampS']], unixEnd]
                 map.setFilter('place-heat', ['all', unixStart, unixEnd]);
                 map.setFilter('place-point', ['all', unixStart, unixEnd]);
+                pieLoader();
                 map.on('render', loadPieChart);
         });
 
@@ -51,6 +52,7 @@
                 var unixEnd = ['<=', ['number', ['get', 'timestampS' ]], 2147483647]
                 map.setFilter('place-heat', ['all', unixStart, unixEnd]);
                 map.setFilter('place-point', ['all', unixStart, unixEnd]);
+                pieLoader();
                 map.on('render', loadPieChart);
         });
     });
@@ -86,7 +88,6 @@
         <a>Side Controls</a>
         <!-- Content of side controls -->
         <div id="piechart"></div>
-
     </div>
     <div id="main">
         <span style="font-size:30px;cursor:pointer;position:fixed;top:50%;color:lightgray" onclick="openLeftControls()"
@@ -157,6 +158,8 @@
 
             // Open controls
             openLeftControls();
+            openLeftControls();
+            pieLoader();
             map.on('render', loadPieChart);
         });
 
@@ -184,6 +187,7 @@
         map.on('draw.update', updateArea);
 
         function updateArea(e) {
+            pieLoader();
             var query = map.queryRenderedFeatures({
                 layers: ['place-point']
             })
@@ -205,6 +209,7 @@
                 }
                 return memo;
             }, []);
+            pieLoader();
             createPieChart(filtered);
         }
 
@@ -252,6 +257,7 @@
 
             map.setFilter('place-heat', buildFilter(filteredActivities))
             map.setFilter('place-point', buildFilter(filteredActivities))
+            pieLoader();
             map.on('render', loadPieChart);
         }
 
